added getMerchantById service,handler and route. added swagger doc too
